update backend system for ecommerce function
